--- a/app/index.html
+++ b/app/index.html
@@ -19,7 +19,7 @@
 <!--//=include ../components/menu/menu.html-->
 <!--//=include ../components/contact-form/contact-form.html-->
 
-<div class="sectiom-home">
+<div class="sectiom-home" id="home">
     <div class="home-request-block">
         <a href="#" class="request-button">Make a request</a>
     </div>
@@ -41,9 +41,18 @@
                 <div class="section-title-name">Enjoy Trading</div>
             </div>
             <div class="section-home-description">Consulting and legal support of your business in China. Development
-                of optimal delivery and control schemes at each stage</div>
+                of optimal delivery and control schemes at each stage
+            </div>
         </div>
-        <div class="home-navigation-block"><div class="navigation"></div></div>
+        <div class="home-navigation-block">
+            <ul class="navigation-list">
+                <li><a href="#home" class="navigation-item"></a></li>
+                <li><a href="#about" class="navigation-item"></a></li>
+                <li><a href="#service" class="navigation-item"></a></li>
+                <li><a href="#partners" class="navigation-item"></a></li>
+                <li><a href="#contact" class="navigation-item"></a></li>
+            </ul>
+        </div>
     </div>
     <div class="home-menu-block">
         <div class="menu-wrap">
@@ -62,22 +71,136 @@
         </div>
     </div>
 </div>
-<!--<div class="sectiom-about">-->
-<!--<div class="home-request-block">-->
-<!--<a href="#" class="request-button">Make a request</a>-->
-<!--</div>-->
-<!--<div class="home-logo-block">-->
-<!--<img src="/img/logo-white.png" alt="">-->
-<!--</div>-->
-<!--<div class="section-title-block">-->
-<!--<div class="section-number-line">01</div>-->
-<!--<div class="section-title-name">Enjoy Trading</div>-->
-<!--</div>-->
-<!--<div class="home-menu-block">-->
-<!--//=include ../components/menu/menu.html-->
-<!--</div>-->
 
-<!--</div>-->
+<div class="section-about" id="about">
+    <div class="section-container">
+        <div class="section-about-top-block">
+            <div class="section-title-block">
+                <div class="section-number-line">02</div>
+                <div class="section-title-name">ABOUT US</div>
+            </div>
+            <div class="section-about-top-description">
+                We strive to ensure the prosperity and maximum profitability of your business with Chinese partners,
+                making cooperation easy and effective.
+            </div>
+        </div>
+        <div class="section-about-bottom-block">
+            <div class="sectiom-about-image-block">
+                <img src="/img/about.png" alt="">
+            </div>
+            <div class="section-about-content">
+                <div class="sectiom-about-short-info">
+                    Enjoy Trading(Shanghai) Co.,Limited specializes in providing consulting and logistics services,
+                    helping in solving business issues in China.
+                </div>
+                <div class="section-about-button-block">
+                    <p>Company Enjoy Trading(Shanghai) Co.,Limited.</p>
+                    <a href="#" class="button-read-more">read more</a>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="service" id="service">
+    <div class="section-container">
+        <div class="service-info-block">
+            <div class="section-title-block">
+                <div class="section-number-line">03</div>
+                <div class="section-title-name">Service</div>
+            </div>
+            <ul class="service-list">
+                <li>SEARCH FOR MANUFACTURERS IN CHINA</li>
+                <li>FULL SUPPORT OF DEAL IN CHINA</li>
+                <li>LOGISTICS AND DELIVERY OF CARGOES FROM CHINA</li>
+                <li>INSPECTION OF THE SUPPLIER IN CHINA</li>
+                <li>CONTROL OF PRODUCTION AND INSPECTION OF LOADING</li>
+                <li>TRANSLATOR IN CHINA</li>
+            </ul>
+            <div class="service-button-block">
+                <a href="#" class="button-read">read</a>
+            </div>
+        </div>
+        <div class="service-image-block">
+            <img src="/img/service.png" alt="">
+        </div>
+    </div>
+    <div class="service-provide-block">
+        <div class="section-container">
+            <div class="service-provide-title-block">We provide</div>
+            <div class="service-provide-info-block">A complex of consulting services in the field of foreign
+                economic activity, which includes several professional areas, which makes it possible to optimize the
+                implementation of the foreign trade transaction as much as possible.
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="partners" id="partners">
+    <div class="section-container">
+        <div class="section-title-block">
+            <div class="section-number-line">04</div>
+            <div class="section-title-name">Partners</div>
+        </div>
+        <div class="service-provide-block">
+        </div>
+    </div>
+</div>
+
+<div class="contact" id="contact">
+    <div class="section-container">
+        <div class="section-about-top-block">
+            <div class="section-title-block">
+                <div class="section-number-line">05</div>
+                <div class="section-title-name">Contact</div>
+            </div>
+        </div>
+    </div>
+    <div class="contact">
+        <div class="contact-form-wrap">
+            <div class="contact-form-desription">
+                <div class="contact-form-title">We’d like to hear from you</div>
+                <div class="contact-form-info">Please select a category and complete the form to submit your enquiry. Add
+                    your comments so we can respond promptly to your question.
+                </div>
+            </div>
+            <div class="contact-form-block">
+                <form action="" class="contact-form">
+                    <input type="email" placeholder="E-mail">
+                    <input type="text" placeholder="Name">
+                    <button class="contact-form-button">send</button>
+                </form>
+            </div>
+        </div>
+        <div class="contact-logo-block">
+        <img src="/img/logo-black.png" alt="">    
+        </div>
+    
+        <div class="contact-information-block">
+        <p>+86 185 2150 5122</p>
+        <p>info@enjoytrading.com</p>
+        </div>
+    <div class="contact-social-block">
+        <ul class="social-list">
+            <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+            <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+            <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+            <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
+        </ul>
+    </div>
+    </div>
+    
+    <footer>
+        <div class="footer-wrap">
+            <div class="up-button-block">
+          <a href='#' class="up-button"></a>
+          </div>
+          <div class="footer-desription">
+              Copyright &copy 2018 STEAK LAB / studio design
+          </div>
+        </div>
+    </footer>
+</div>
 
 
 </body>
