--- a/app/index.html
+++ b/app/index.html
@@ -19,6 +19,16 @@
 <!--//=include ../components/menu/menu.html-->
 <!--//=include ../components/contact-form/contact-form.html-->
 
+<!--<div class="home-navigation-block">-->
+<!--<ul class="navigation-list">-->
+<!--<li><a href="#home" class="navigation-item"></a></li>-->
+<!--<li><a href="#about" class="navigation-item"></a></li>-->
+<!--<li><a href="#service" class="navigation-item"></a></li>-->
+<!--<li><a href="#partners" class="navigation-item"></a></li>-->
+<!--<li><a href="#contact" class="navigation-item"></a></li>-->
+<!--</ul>-->
+<!--</div>-->
+
 <div class="sectiom-home" id="home">
     <div class="home-request-block">
         <a href="#" class="request-button">Make a request</a>
@@ -35,7 +45,7 @@
                 <li><a href="#"><i class="fa fa-twitter"></i></a></li>
             </ul>
         </div>
-        <div class="section-container">
+        <div class="home-container">
             <div class="section-title-block">
                 <div class="section-number-line">01</div>
                 <div class="section-title-name">Enjoy Trading</div>
@@ -44,14 +54,16 @@
                 of optimal delivery and control schemes at each stage
             </div>
         </div>
-        <div class="home-navigation-block">
-            <ul class="navigation-list">
-                <li><a href="#home" class="navigation-item"></a></li>
-                <li><a href="#about" class="navigation-item"></a></li>
-                <li><a href="#service" class="navigation-item"></a></li>
-                <li><a href="#partners" class="navigation-item"></a></li>
-                <li><a href="#contact" class="navigation-item"></a></li>
-            </ul>
+        <div class="home-scroll-down-block">
+            <div class="scroll-down-circle"></div>
+            <div class="scroll-down-text">scroll down</div>
+            <div class="scroll-down-animation-button">
+                <ul class="list-angles">
+                    <li><i class="fa fa-angle-down"></i></li>
+                    <li><i class="fa fa-angle-down"></i></li>
+                    <li><i class="fa fa-angle-down"></i></li>
+                </ul>
+            </div>
         </div>
     </div>
     <div class="home-menu-block">
@@ -61,7 +73,7 @@
             <!--</div>-->
             <div class="menu-block">
                 <ul class="menu-list">
-                    <li><a href="#" class="menu-item"><span>01</span> HOME</a></li>
+                    <li class="active"><a href="#" class="menu-item"><span>01</span> HOME</a></li>
                     <li><a href="#" class="menu-item"><span>02</span> ABOUT US</a></li>
                     <li><a href="#" class="menu-item"><span>03</span> SERVICE</a></li>
                     <li><a href="#" class="menu-item"><span>04</span> partners</a></li>
@@ -142,9 +154,50 @@
             <div class="section-number-line">04</div>
             <div class="section-title-name">Partners</div>
         </div>
-        <div class="service-provide-block">
+    </div>
+    <div class="partners-table-block">
+        <div class="partners-column partners-column-left">
+            <div class="partners-item">
+                <div class="partners-image-block">
+                    <img src="/img/cofe.jpg" alt="">
+                </div>
+            </div>
+            <div class="partners-item">
+                <div class="partners-item-text-block">
+                    Many entrepreneurs want to start a business with China, but are afraid of dishonesty on the part
+                    of Chinese entrepreneurs. And this is not groundless.
+                </div>
+                <div class="partners-image-block">
+                    <img src="/img/shanhay.jpg" alt="">
+                    <div class="partners-popup">
+                        <div class="partners-popup-image"><img src="/img/world.png" alt=""></div>
+                        <div class="partners-popup-info">How to be one hundred percent sure of who you transfer money to
+                            and what quality of goods do you get as a result?
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="partners-column partners-column-right">
+            <div class="partners-item">
+                <div class="partners-image-block">
+                    <img src="/img/documents.jpg" alt="">
+                </div>
+                <div class="partners-image-block">
+                    <img src="/img/person.jpg" alt="">
+                </div>
+            </div>
+            <div class="partners-item">
+                <div class="partners-image-block">
+                    <img src="/img/hands.jpg" alt="">
+                </div>
+                <div class="partners-image-block">
+                    <img src="/img/folders.jpg" alt="">
+                </div>
+            </div>
         </div>
     </div>
+
 </div>
 
 <div class="contact" id="contact">
@@ -173,31 +226,31 @@
             </div>
         </div>
         <div class="contact-logo-block">
-        <img src="/img/logo-black.png" alt="">    
+            <img src="/img/logo-black.png" alt="">
         </div>
-    
         <div class="contact-information-block">
-        <p>+86 185 2150 5122</p>
-        <p>info@enjoytrading.com</p>
+            <p>+86 185 2150 5122</p>
+            <p>info@enjoytrading.com</p>
         </div>
-    <div class="contact-social-block">
-        <ul class="social-list">
-            <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-            <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-            <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-            <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-        </ul>
-    </div>
+        <div class="contact-social-block">
+            <ul class="social-list">
+                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
+            </ul>
+        </div>
+        <div class="contact-adress">Rm 102, #3, Lane 179, Lian Nong Rd.,<br>Minhang District, Shanghai, PR of China</div>
     </div>
     
     <footer>
         <div class="footer-wrap">
             <div class="up-button-block">
-          <a href='#' class="up-button"></a>
-          </div>
-          <div class="footer-desription">
-              Copyright &copy 2018 STEAK LAB / studio design
-          </div>
+                <a href='#' class="up-button"></a>
+            </div>
+            <div class="footer-desription">
+                Copyright &copy 2018 STEAK LAB / studio design
+            </div>
         </div>
     </footer>
 </div>
